Fix photo media queries on smaller sizes.

--- a/src/components/album/album-styles.scss
+++ b/src/components/album/album-styles.scss
@@ -1,11 +1,15 @@
 .image-flex-wrap {
-	margin: 5% 10% 0;
+	margin: 0 10% 0;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-around;
 
 	div {
 		margin-bottom: 4%;
+	}
+
+	@media only screen and (max-width : 926px) {
+		margin: 0;
 	}
 
 	img:not([src]) {
@@ -23,7 +27,7 @@
 .image-small {
 	width: 48%;
 
-		@media screen and (max-width: 767px) {
+		@media screen and (max-width: 926px) {
 			width: 100%;
 		}
 }
